commit translated contents

--- a/articles/azure-resource-manager/templates/index.yml
+++ b/articles/azure-resource-manager/templates/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: na
   author: mumian
   ms.author: jgao
-  ms.date: 03/09/2020
-  ms.openlocfilehash: d6c1708543623423c939d03f0510e1abc72cf637
-  ms.sourcegitcommit: 6fd28c1e5cf6872fb28691c7dd307a5e4bc71228
+  ms.date: 07/07/2020
+  ms.openlocfilehash: 4a40b64c72946c84d034e13f3a22b7cda2b9c6aa
+  ms.sourcegitcommit: d7008edadc9993df960817ad4c5521efa69ffa9f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/23/2020
-  ms.locfileid: "85209192"
+  ms.lasthandoff: 07/08/2020
+  ms.locfileid: "86118862"
 landingContent:
 - title: 关于 ARM 模板
   linkLists:
@@ -29,14 +29,16 @@ landingContent:
     links:
     - text: 最佳做法
       url: template-best-practices.md
+    - text: 常见问题
+      url: frequently-asked-questions.md
     - text: 部署模式
       url: deployment-modes.md
     - text: 链接模板
       url: linked-templates.md
   - linkListType: video
     links:
-    - text: 新增功能
-      url: https://youtu.be/3D-JIKShrws
+    - text: Build 2020 大会展示内容
+      url: https://mybuild.microsoft.com/sessions/82984db4-37a4-4ed3-bf8b-13298841ed18?source=sessions
 - title: 入门
   linkLists:
   - linkListType: quickstart
@@ -61,8 +63,6 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 使用 VS Code
-      url: use-vs-code-to-create-template.md
     - text: 使用函数
       url: template-functions.md
     - text: 定义参数
