--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: ca9b94c3f16f87d4c247f1c9bd7ebeccc0af6659
-  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
+  ms.openlocfilehash: fe377424c1a10b1356718d3c8c0d90a6a3db4d63
+  ms.sourcegitcommit: e995f770a0182a93c4e664e60c025e5ba66d6a45
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/01/2020
-  ms.locfileid: "85832757"
+  ms.lasthandoff: 07/08/2020
+  ms.locfileid: "86134349"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -1048,7 +1048,7 @@ productDirectory:
     - migration
     - storage
     url: databox/index.yml
-  - title: 空间定位点（预览版）
+  - title: 空间定位点
     summary: 创建多用户的、具有空间感的混合现实体验
     imageSrc: https://static.docs.com/ui/media/product/azure/spatial-anchor-accounts.svg
     azureCategories:
