--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -228,6 +228,8 @@
           href: control-kubeconfig-access.md
         - name: 使用网络策略保护 Pod 流量
           href: use-network-policies.md
+        - name: 使用 Azure Policy 保护 Pod（预览）
+          href: use-pod-security-on-azure-policy.md
         - name: 使用 pod 安全策略（预览版）
           href: use-pod-security-policies.md
         - name: 定义 API 服务器授权 IP 范围
@@ -244,6 +246,8 @@
               href: managed-aad.md
             - name: 使用 Azure CLI
               href: azure-ad-integration-cli.md
+        - name: 使用 Azure RBAC 进行 Kubernetes 授权（预览）
+          href: manage-azure-rbac.md
         - name: 将 Kubernetes RBAC 用于 Azure AD 集成
           href: azure-ad-rbac.md
           maintainContext: true
