commit translated contents

--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -276,7 +276,7 @@
     - name: Batch Shipyard
       href: 'https://github.com/Azure/batch-shipyard'
     - name: 博客
-      href: 'https://blogs.technet.microsoft.com/windowshpc/'
+      href: /archive/blogs/windowshpc/
     - name: 基于 Azure 的 HPC
       href: /azure/architecture/topics/high-performance-computing/
     - name: 定价
