--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -511,6 +511,8 @@
                       href: ../vm-specialized-image-version-powershell.md
                 - name: 更新映像资源
                   href: ../update-image-resources-powershell.md
+                - name: 用于共享的应用注册
+                  href: ../windows/share-images-across-tenants.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: 门户
               items:
                 - name: 创建库、映像和 VM
@@ -947,8 +949,6 @@
           items:
             - name: 使用 Azure Site Recovery 迁移到高级存储
               href: migrate-to-premium-storage-using-azure-site-recovery.md
-            - name: 转换为服务器端加密
-              href: disks-ade-sse-conversion-cli.md
             - name: 转换为托管磁盘
               href: convert-unmanaged-to-managed-disks.md
             - name: 在“标准”和“高级”之间转换磁盘
