--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -308,7 +308,7 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/?category=management-tools&query=automation'
     - name: Microsoft Q&A 问题页面
-      href: 'https://docs.microsoft.com/en-us/answers/topics/azure-automation.html'
+      href: /answers/topics/azure-automation.html
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/automation/'
     - name: 定价计算器
