--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -26,6 +26,8 @@
       href: concepts-storage.md
     - name: 私有云的访问权限和标识
       href: concepts-identity.md
+    - name: 基于角色的访问控制
+      href: concepts-rbac.md
     - name: 私有云升级
       href: concepts-upgrades.md
 - name: 操作指南
@@ -36,27 +38,15 @@
       href: manage-dhcp.md
     - name: 灾难恢复
       href: disaster-recovery.md
-    - name: 通过内容库部署 VM
-      href: deploy-vm-content-library.md
     - name: 用于 AVS 的 Azure 备份服务器
       items:
         - name: 设置用于 AVS 的 Azure 备份服务器
           href: set-up-mabs-for-avs.md
         - name: 使用 Azure 备份服务器备份 AVS VM
           href: backup-avs-vms-with-mabs.md
-    - name: Azure 本机集成
-      items:
-        - name: API 管理
-          href: concepts-api-management.md
-        - name: 中心和分支
-          href: concepts-avs-hub-and-spoke-integration.md
 - name: 参考
   items: null
 - name: 资源
   items:
-    - name: 疑难解答
-      items:
-        - name: 获取有关 AVS 部署或预配失败的帮助
-          href: fix-deployment-provisioning-failures.md
     - name: 常见问题解答
       href: faq.md
